--- a/Panel.html
+++ b/Panel.html
@@ -3,6 +3,7 @@
         <script src="panel.js"></script>
     </head>
     <body>
-        <h2>Hoshell</h2>
+        <h2>Double Inspector please</h2>
+        <!-- Check your local storage -->
     </body>
 </html>
